some mobile view broken layouts fixes

--- a/client/src/pages/AboutPage/AboutPage.module.css
+++ b/client/src/pages/AboutPage/AboutPage.module.css
@@ -360,6 +360,7 @@
 
 @media (max-width: 600px) {
   .aboutHero {
+    margin-bottom: 1.5rem;
     padding: 2px 5%;
   }
 
